push before NoCustomization change

--- a/assets/custom-style.css.liquid
+++ b/assets/custom-style.css.liquid
@@ -104,11 +104,12 @@ th,td,input,select,li,p,span{ font-size: 14px !important; }
 #sec_nav{position: static;}
 
 @media (min-width: 720px){
-	#AddToCartForm button, #AddToCartForm select, #AddToCartForm input, #AddToCartForm textarea, #AddToCartForm .note{
+  
+	#AddToCartForm button, #AddToCartForm select, #AddToCartForm input, #AddToCartForm textarea, #AddToCartForm .note, #AddToCartForm .w3-row{
         width:70% !important;
     }
   
-  	[data-option-name^='window-'] {max-width: 35% !important;}
+  	[data-option-name^='window-'] {max-width: 50% !important;}
   
   	#sec_nav, #nav-1{position: relative;}
   
