--- a/templates/page.order-summary.liquid
+++ b/templates/page.order-summary.liquid
@@ -592,11 +592,11 @@
 //     createThumbImg(data);
   }
   
-  const removeEmpty = (obj) => {
-    Object.keys(obj).forEach(k =>
-      (obj[k] && typeof obj[k] === 'object') && removeEmpty(obj[k]) ||
-      (!obj[k] && obj[k] !== undefined) && delete obj[k]
-    );
+  function removeEmpty(obj) {
+    Object.keys(obj).forEach(function(key) {
+      if (obj[key] && typeof obj[key] === 'object') removeEmpty(obj[key])
+      else if (obj[key] == null) delete obj[key]
+    });
     return obj;
   };
   
