--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -53,7 +53,7 @@
 
 
 
-<!-- BeginConsistentCartAddon --><script>{% if customer %}Shopify.merge_cart_text = '{{ "consistent_cart_addon.merge_cart_text" | t }}' ;Shopify.customer_logged_in = true ;Shopify.customer_email = "{{ customer.email }}" ;Shopify.log_uuids = true;{% else %}Shopify.customer_logged_in = false ;Shopify.customer_email = "" ;Shopify.log_uuids = true;{% endif %}</script><!-- EndConsistentCartAddon -->
+
 <!-- Hits Analytics tracking code -->
 {% if shop.customer_accounts_enabled %}
   {% if customer %}
@@ -70,7 +70,8 @@
 {% endif %}
 <!-- end of Hits Analytics code -->
 
- </head>
+ <!-- BeginConsistentCartAddon --><script>{% if customer %}Shopify.merge_cart_text = '{{ "consistent_cart_addon.merge_cart_text" | t }}' ;Shopify.customer_logged_in = true ;Shopify.customer_email = "{{ customer.email }}" ;Shopify.log_uuids = true;{% else %}Shopify.customer_logged_in = false ;Shopify.customer_email = "" ;Shopify.log_uuids = true;{% endif %}</script><!-- EndConsistentCartAddon -->
+</head>
 <body>	
     {% include 'buddha-megamenu' %}
 </body>
@@ -559,8 +560,8 @@
   </script> -->
 
   {% include 'buddha-megamenu' %}
-  
-  {% unless template contains 'customers/login' %}
+  {% include 'mesh-window-cart' %}
+  {% unless template contains 'customers/login' or customer.email contains 'Monitor' %}
  	 {% section 'popup-section' %}
   {% endunless %}
   
