--- a/snippets/customer-account-common-code.liquid
+++ b/snippets/customer-account-common-code.liquid
@@ -267,7 +267,7 @@
   function removeEmpty(obj) {
     Object.keys(obj).forEach(function(key) {
       if (obj[key] && typeof obj[key] === 'object') removeEmpty(obj[key])
-      else if (obj[key] == null) delete obj[key]
+      else if (!obj[key] && obj[key] !== undefined) delete obj[key]
     });
     return obj;
   };
